# Pokedex

./: CMakeLists.txt  Pokedex
Data/: PokeApi.cc  PokeApi.h
Data/JsonMappers/: AllPokemonMapper.cpp  AllPokemonMapper.h  SinglePokemonMapper.cc  SinglePokemonMapper.h
Domain/: IMapper.h  IPokemonRepository.h  Pokemon.cc  Pokemon.h  PokemonDTO.h
Program/: Compile.txt  Main.cc
View/: TerminalViewer.h
